kemkas-beta/kemkas-fe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kemkas-fe
  namespace: kemkas-beta
  labels:
    app: kemkas-fe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kemkas-fe
  template:
    metadata:
      name: kemkas-fe
      labels:
        app: kemkas-fe
    spec:
      containers:
        - name: kemkas-fe
          image: registry.digitalocean.com/kemkas/kemkas-fe:263314e4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 50M
            limits:
              cpu: 500m
              memory: 200M
      restartPolicy: Always
