kemkas-beta/kemkas-be-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kemkas-be-service
  namespace: kemkas-beta
  labels:
    app: kemkas-be
spec:
  selector:
    app: kemkas-be
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
